@@ -6,6 +6,6 @@ import fr.insee.vtl.model.exceptions.VtlScriptException;
 public class FunctionNotFoundException extends VtlScriptException {
 
     public FunctionNotFoundException(String funcName, Positioned element) {
-        super(String.format("function '%s' not found", funcName), element);
+        super("function '%s' not found".formatted(funcName), element);
     }
 }
