@@ -8,9 +8,14 @@ import fr.insee.vtl.engine.expressions.CastExpression;
 import fr.insee.vtl.engine.expressions.ComponentExpression;
 import fr.insee.vtl.engine.expressions.FunctionExpression;
 import fr.insee.vtl.engine.visitors.expression.ExpressionVisitor;
-import fr.insee.vtl.model.*;
+import fr.insee.vtl.model.Dataset;
+import fr.insee.vtl.model.DatasetExpression;
+import fr.insee.vtl.model.Positioned;
+import fr.insee.vtl.model.ProcessingEngine;
+import fr.insee.vtl.model.ResolvableExpression;
+import fr.insee.vtl.model.Structured;
+import fr.insee.vtl.model.TypedExpression;
 import fr.insee.vtl.model.exceptions.VtlScriptException;
-import fr.insee.vtl.model.utils.Java8Helpers;
 import fr.insee.vtl.parser.VtlBaseVisitor;
 import fr.insee.vtl.parser.VtlParser;
 import org.antlr.v4.runtime.Token;
@@ -19,7 +24,12 @@ import org.threeten.extra.Interval;
 import org.threeten.extra.PeriodDuration;
 
 import java.time.Instant;
-import java.util.*;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -52,24 +62,16 @@ public class GenericFunctionsVisitor extends VtlBaseVisitor<ResolvableExpression
      * @param basicScalarText Basic scalar text.
      */
     private static Class<?> getOutputClass(Integer basicScalarType, String basicScalarText) {
-        switch (basicScalarType) {
-            case VtlParser.STRING:
-                return String.class;
-            case VtlParser.INTEGER:
-                return Long.class;
-            case VtlParser.NUMBER:
-                return Double.class;
-            case VtlParser.BOOLEAN:
-                return Boolean.class;
-            case VtlParser.DATE:
-                return Instant.class;
-            case VtlParser.DURATION:
-                return PeriodDuration.class;
-            case VtlParser.TIME_PERIOD:
-                return Interval.class;
-            default:
-                throw new UnsupportedOperationException("basic scalar type " + basicScalarText + " unsupported");
-        }
+        return switch (basicScalarType) {
+            case VtlParser.STRING -> String.class;
+            case VtlParser.INTEGER -> Long.class;
+            case VtlParser.NUMBER -> Double.class;
+            case VtlParser.BOOLEAN -> Boolean.class;
+            case VtlParser.DATE -> Instant.class;
+            case VtlParser.DURATION -> PeriodDuration.class;
+            case VtlParser.TIME_PERIOD -> Interval.class;
+            default -> throw new UnsupportedOperationException("basic scalar type " + basicScalarText + " unsupported");
+        };
     }
 
     public List<DatasetExpression> splitToMonoMeasure(DatasetExpression dataset) {
@@ -85,9 +87,9 @@ public class GenericFunctionsVisitor extends VtlBaseVisitor<ResolvableExpression
 
     public ResolvableExpression invokeFunction(String funcName, List<ResolvableExpression> parameters, Positioned position) throws VtlScriptException {
         try {
-            List<DatasetExpression> noMonoDs = parameters.stream().filter(e -> e instanceof DatasetExpression && !(((DatasetExpression) e).isMonoMeasure()))
+            List<DatasetExpression> noMonoDs = parameters.stream().filter(e -> e instanceof DatasetExpression de && !(de.isMonoMeasure()))
                     .map(ds -> (DatasetExpression) ds)
-                    .collect(Collectors.toList());
+                    .toList();
             if (noMonoDs.size() > 2) {
                 throw new VtlRuntimeException(
                         new InvalidArgumentException("too many no mono-measure datasets (" + noMonoDs.size() + ")", position)
@@ -104,7 +106,7 @@ public class GenericFunctionsVisitor extends VtlBaseVisitor<ResolvableExpression
             List<Class> parameterTypes = parameters.stream().map(ResolvableExpression::getType).collect(Collectors.toList());
             // Only one parameter, and it's a dataset. We can invoke the function on each measure.
             // Or method found in global methods
-            VtlMethod method = engine.findGlobalMethod(funcName, parameterTypes);
+            var method = engine.findGlobalMethod(funcName, parameterTypes);
             if (parameters.stream().noneMatch(DatasetExpression.class::isInstance) || method != null) {
                 // Only scalar types. We can invoke the function directly.
                 if (method == null) {
@@ -118,8 +120,7 @@ public class GenericFunctionsVisitor extends VtlBaseVisitor<ResolvableExpression
                 Map<String, DatasetExpression> results = new HashMap<>();
                 for (Structured.Component measure : measures) {
                     List<ResolvableExpression> params = parameters.stream().map(p -> {
-                        if (p instanceof DatasetExpression) {
-                            DatasetExpression ds = (DatasetExpression) p;
+                        if (p instanceof DatasetExpression ds) {
                             List<String> idAndMeasure = Stream.concat(ds.getIdentifiers().stream(), Stream.of(measure))
                                     .map(Structured.Component::getName)
                                     .collect(Collectors.toList());
@@ -130,11 +131,11 @@ public class GenericFunctionsVisitor extends VtlBaseVisitor<ResolvableExpression
                 }
                 finalRes = proc.executeInnerJoin(results);
             }
-            if (finalRes instanceof DatasetExpression) {
-                List<Structured.Component> measures = ((DatasetExpression) finalRes).getMeasures();
+            if (finalRes instanceof DatasetExpression expression) {
+                List<Structured.Component> measures = expression.getMeasures();
                 if (measures.size() == 1 && measures.get(0).getType().equals(Boolean.class)) {
                     // TODO: refine with constraints matrix
-                    return proc.executeRename((DatasetExpression) finalRes, Java8Helpers.mapOf(measures.get(0).getName(), "bool_var"));
+                    return proc.executeRename(expression, Map.of(measures.get(0).getName(), "bool_var"));
                 }
             }
             return finalRes;
@@ -150,19 +151,19 @@ public class GenericFunctionsVisitor extends VtlBaseVisitor<ResolvableExpression
         // 1. Join all the datasets together and build a new expression map.
         Map<String, ResolvableExpression> monoExprs = new HashMap<>();
         Set<String> measureNames = new HashSet<>();
-        Map<String, DatasetExpression> dsExprs = parameters.stream()
+        var dsExprs = parameters.stream()
                 .filter(DatasetExpression.class::isInstance)
                 .map(e -> ((DatasetExpression) e))
                 .map(ds -> {
                     if (Boolean.FALSE.equals(ds.isMonoMeasure())) {
                         throw new VtlRuntimeException(new InvalidArgumentException("mono-measure dataset expected", ds));
                     }
-                    String uniqueName = "arg" + ds.hashCode();
-                    Structured.Component measure = ds.getMeasures().get(0);
+                    var uniqueName = "arg" + ds.hashCode();
+                    var measure = ds.getMeasures().get(0);
                     String measureName = measure.getName();
                     measureNames.add(measureName);
-                    ds = proc.executeRename(ds, Java8Helpers.mapOf(measureName, uniqueName));
-                    Structured.Component renamedComponent = new Structured.Component(uniqueName, measure.getType(), measure.getRole(), measure.getNullable());
+                    ds = proc.executeRename(ds, Map.of(measureName, uniqueName));
+                    var renamedComponent = new Structured.Component(uniqueName, measure.getType(), measure.getRole(), measure.getNullable());
                     monoExprs.put(uniqueName, new ComponentExpression(renamedComponent, ds));
                     return ds;
                 })
@@ -176,7 +177,7 @@ public class GenericFunctionsVisitor extends VtlBaseVisitor<ResolvableExpression
         DatasetExpression ds = proc.executeInnerJoin(dsExprs);
 
         // Rebuild the function parameters. TODO: All component?
-        List<ResolvableExpression> normalizedParams = parameters.stream()
+        var normalizedParams = parameters.stream()
                 .map(e -> monoExprs.getOrDefault("arg" + e.hashCode(), e))
                 .collect(Collectors.toList());
 
@@ -184,11 +185,11 @@ public class GenericFunctionsVisitor extends VtlBaseVisitor<ResolvableExpression
         List<Class> parametersTypes = normalizedParams.stream()
                 .map(TypedExpression::getType)
                 .collect(Collectors.toList());
-        VtlMethod method = engine.findMethod(funcName, parametersTypes);
-        FunctionExpression funcExrp = new FunctionExpression(method, normalizedParams, position);
-        ds = proc.executeCalc(ds, Java8Helpers.mapOf(result, funcExrp), Java8Helpers.mapOf(result, Dataset.Role.MEASURE), Java8Helpers.mapOf());
+        var method = engine.findMethod(funcName, parametersTypes);
+        var funcExrp = new FunctionExpression(method, normalizedParams, position);
+        ds = proc.executeCalc(ds, Map.of(result, funcExrp), Map.of(result, Dataset.Role.MEASURE), Map.of());
         ds = proc.executeProject(ds, Stream.concat(ds.getIdentifiers().stream().map(Structured.Component::getName), Stream.of(result)).collect(Collectors.toList()));
-        return proc.executeRename(ds, Java8Helpers.mapOf(result, measureNames.iterator().next()));
+        return proc.executeRename(ds, Map.of(result, measureNames.iterator().next()));
     }
 
     @Override
