@@ -1,7 +1,6 @@
 package fr.insee.vtl.model.exceptions;
 
 import fr.insee.vtl.model.Positioned;
-import fr.insee.vtl.model.utils.Java8Helpers;
 
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -23,11 +22,11 @@ public class InvalidTypeException extends VtlScriptException {
      * @param position     The position of the error.
      */
     public InvalidTypeException(Class<?> expectedType, Class<?> receivedType, Positioned position) {
-        super(String.format("invalid type %s, expected %s",
+        super("invalid type %s, expected %s".formatted(
                 receivedType.getSimpleName(), expectedType.getSimpleName()
         ), position);
         this.expectedType = expectedType;
-        this.expectedTypes = Java8Helpers.setOf(expectedType);
+        this.expectedTypes = Set.of(expectedType);
         this.receivedType = receivedType;
     }
 
@@ -39,7 +38,7 @@ public class InvalidTypeException extends VtlScriptException {
      * @param position      The parsing context where the exception is thrown.
      */
     public InvalidTypeException(Set<Class<?>> expectedTypes, Class<?> receivedType, Positioned position) {
-        super(String.format("invalid type %s to be %s",
+        super("invalid type %s to be %s".formatted(
                 receivedType.getSimpleName(),
                 expectedTypes
                         .stream()
